feat:add feature for all pdf

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,35 +17,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 22/22 [03:54<00:00, 10.66s/it]\n"
+      "100%|██████████| 22/22 [07:46<00:00, 21.22s/it]\n"
      ]
     }
    ],
    "source": [
     "multiDocumentEngine = MultiDocumentQueryEngine()\n",
-    "multiDocumentEngine.build_query_engine(html_folder= 'data/pdf',\n",
-    "                                    nodes_folder = 'data/nodes',\n",
-    "                                    summary_folder = 'data/summary')\n",
-    "top_agent_query_engine = multiDocumentEngine.multi_documents_query_engine()"
+    "top_agent_query_engine = multiDocumentEngine.build_query_engine(html_folder= 'data/pdf',\n",
+    "                                                                nodes_folder = 'data/nodes',\n",
+    "                                                                summary_folder = 'data/summary',\n",
+    "                                                                model_path = 'model/cache_qe',)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/22 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 22/22 [06:32<00:00, 17.82s/it]\n"
+     ]
+    }
+   ],
    "source": [
     "multiDocumentRetriever = MultiDocumentRetriever()\n",
     "top_agent_retriever = multiDocumentRetriever.build_retriever(html_folder= 'data/pdf',\n",
-    "                                    nodes_folder = 'data/nodes',\n",
-    "                                    summary_folder = 'data/summary')"
+    "                                                             nodes_folder = 'data/nodes',\n",
+    "                                                             summary_folder = 'data/summary',\n",
+    "                                                             model_path = 'model/cache_retriever')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "STARTING TURN 1\n",
+      "---------------\n",
+      "\n",
+      "=== Calling Function ===\n",
+      "Calling function: tool_batavia_usd_balanced_asia_fundsheet with args: {\"input\":\"minimum and maximum percentage of equity securities investment\"}\n",
+      "Got output: 1%-30%\n",
+      "========================\n",
+      "\n",
+      "STARTING TURN 2\n",
+      "---------------\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "response = top_agent_query_engine.query(\"Berapa persentase minimum dan maksimum investasi pada efek bersifat ekuitas untuk BATAVIA USD BALANCED ASIA ?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Persentase minimum dan maksimum investasi pada efek bersifat ekuitas untuk Batavia USD Balanced Asia adalah 1% hingga 30%.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(response.response)"
    ]
   },
   {
